package com.interview.automatedparkinglot.model.enums;

public enum ParkingSlotStatus {
    AVAILABLE,
    OCCUPIED
}