package com.interview.automatedparkinglot.model.enums;

public enum PaymentMethod {
    CASH,
    UPI
}