package com.interview.automatedparkinglot.model.enums;

public enum VehicleType {
    CAR,
    BIKE,
    TRUCK
}