package com.interview.automatedparkinglot.service;

public interface PaymentStrategy {
    void processPayment(double amount);
}
